Fixed text spacing in mobile screens

--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -141,23 +141,46 @@
         position: absolute;
         left: 50%;
         top: 50%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%, -50%);
     }
 
     .center>h2 {
         text-align: center;
     }
 }
+
 @media only screen and (max-width: 500px) {
+    .loading_container>h1 {
+        font-size: 6rem;
+    }
+    .loading_container>h2 {
+        font-size: 4rem;
+    }
+
     .center>h1 {
         font-size: 1.8rem;
     }
-    
+
     .center>h2>.st {
-        font-size: 1.0rem;
+        font-size: 1.2rem;
     }
-    
+
     .center>h2 {
-        font-size: 0.6rem;
+        font-size: 0.8rem;
+        padding: 0 0.5rem;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .center>h1 {
+        font-size: 1.4rem;
+    }
+
+    .center>h2>.st {
+        font-size: 1.2rem;
+    }
+
+    .center>h2 {
+        font-size: 0.8rem;
     }
 }
